2008-11-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tkUnixFont.c:   fix [Bug 2226093] const changes not all correct
	* unix/tkUnixButton.c: more internal -Wwrite-strings warning fixes
	* unix/tkUnixRFont.c:

2008-11-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkEntry.c: fix warning: unused variable `currentValue'
	* generic/tkOldTest.c:    fix warning: assignment discards qualifiers
	* win/tkWinTest.c:        from pointer target type

2008-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winClipboard.test: testclipboard no longer returns strings
	with embedded \r but now returns Tcl strings
	* tests/winfo.test: fixed embedding test broken during upgrade
	* tests/busy.test: default wait cursor on windows is 'wait'
	* win/tkWinFont.c: const fixes for the windows code.

2008-11-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkFont.h:      more internal -Wwrite-strings warning fixes
	* generic/tkFont.c
	* generic/ttk/ttkTheme.h
	* generic/ttk/ttkDefaultTheme.c
	* generic/ttk/ttkState.c
	* macosx/tkMacOSXFont.c
	* unix/tkUnixFont.c
	* win/tkWinFont.c

2008-11-01  Donal K. Fellows  <dkf@users.sf.net>

	TIP #97 IMPLEMENTATION

	* generic/tkCanvas.c (CanvasWidgetCmd): Implementation of the 'imove'
	and 'rchars' subcommands.
	* generic/tk.h (TK_MOVABLE_POINTS): New flag to allow items to state
	whether they support finding and moving individual coordinates.
	* doc/canvas.n, tests/canvas.test: Docs 'n' tests.

2008-11-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/ttk/ttkEntry.c:      Implemented the themed spinbox
	* library/ttk/altTheme.tcl:    widget.
	* library/ttk/clamTheme.tcl:
	* library/ttk/classicTheme.tcl:
	* library/ttk/defaults.tcl:
	* library/ttk/entry.tcl:
	* library/ttk/ttk.tcl:
	* library/ttk/winTheme.tcl:
	* library/ttk/xpTheme.tcl:
	* library/ttk/spinbox.tcl:
	* win/ttkWinTheme.c:
	* win/ttkWinXPTheme.c:
	* doc/ttk_spinbox.n:
	* tests/ttk/spinbox.test:
